Inserção de arquivos ao git

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                 <div class="container mt-5 center col-lg-8 col-md-10">
             <h2 class="mt-4 mb-4">Recuperador de Eventos Legislativos</h2>
             <p class="mb-2">Para pesquisar se determinado evento em pauta possui aderência a determinado
-                tema, é necessário previamente montar a base de dados a partir dos dados da Câmara dos Deputados. Para isso basta apertar no botão a seguir. </p>
+                tema, é necessário previamente montar a base de dados a partir dos dados da Câmara dos Deputados. Para isso basta apertar no botão a seguir. Nesta primeira versão a data dos dados recuperados será fixa para a próxima semana. </p>
             <div class="col-12 text-center">
                 <button type="button" class="btn btn-primary" id="build-data">Montar Base de Dados</button>
                 <div id="status-message" class="mt-3 fw-bold"></div>
